<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registrar"
    android:background="@color/Fondo_frame">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:gravity="center"/>

        <ImageView
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:contentDescription="@string/imagen_inicio_y_registro"
            android:src="@drawable/vaca"
            android:scaleType="fitCenter"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <EditText
                android:id="@+id/NombreU"
                android:hint="@string/NombreU"
                android:inputType="text|textPersonName|textCapWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icono_nombre"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/contrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_lock"
                android:hint="@string/Contrasenia"
                android:inputType="textPassword"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/confirmarContrasenia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_lock"
                android:hint="@string/confirmarContrasenia"
                android:inputType="textPassword"
                android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ingresar"
            android:text="@string/Ingresar"
            android:onClick="onClickIngresar"
            android:layout_marginTop="10dp"
            android:textColor="@color/Letras_boton"
            android:backgroundTint="@color/Color_boton"
            android:fontFamily="@font/roboto_bold"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>